--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-320upStyl
+320Stylus
 =========
 
 A tiny as possible boilerplate for rapid websites development using the mobile-first approach. This is built to be used alongside with [stylus](https://github.com/LearnBoost/stylus).
