--- a/README.mkd
+++ b/README.mkd
@@ -2,3 +2,14 @@
 =========
 
 A tiny as possible boilerplate for rapid websites development using the mobile-first approach. This is built to be used alongside with [stylus](https://github.com/LearnBoost/stylus).
+
+Requirements
+------------
+
++ Node.js (Required by stylus).
++ Stylus installed. Just `npm install -g stylus`.
+
+Usage
+-----
+
+Just copy `stylesheets/` to your `public_html/` or whatever you call it, run `stylus stylesheets/style.styl` and link from your HTML to `/stylesheets/style.css`.
